[project]
name = "target-visualization"
version = "0.1.0"
description = "Policy Target Dataset Visualization — Shiny for Python web app to vizualize Chinese climate policy target data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastexcel>=0.19.0",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "plotly>=6.6.0",
    "polars>=1.35.0",
    "requests>=2.32.3",
    "shiny>=1.5.0",
    "shinywidgets>=0.7.1",
]
